--- a/package.json
+++ b/package.json
@@ -3,13 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "npm run serve-dev",
+    "serve-dev": "vue-cli-service serve --mode development",
+    "serve-test": "vue-cli-service serve --mode testing",
+    "serve-prod": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@vue/apollo-composable": "^4.0.0-beta.1",
+    "@vue/apollo-option": "^4.0.0-alpha.20",
+    "apollo-boost": "^0.4.9",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "node-sass": "^7.0.3",
+    "postcss-pxtorem": "^6.0.0",
+    "sass-loader": "^13.1.0",
+    "swiper": "^8.4.4",
+    "vant": "^3.6.4",
+    "vue": "^3.2.13",
+    "vue-apollo": "^3.1.0",
+    "vue-router": "4",
+    "vue3-count-to": "^1.1.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +36,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass-resources-loader": "^2.2.5",
+    "unplugin-vue-components": "^0.22.9",
+    "vue-cli-plugin-apollo": "~0.22.2"
   },
   "eslintConfig": {
     "root": true,
